// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePlanModal /> should display only compared plan when there is no current plan 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Title of modal
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="p-0 modal-body"
            >
              <div
                class="m-3"
              >
                description of the plan change
              </div>
              <div
                class="m-3 flex justify-content-center"
              >
                <div>
                  renderComparedPlan
                </div>
              </div>
            </div>
            <div
              class="footer modal-footer"
            >
              <button
                class="wrapper secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                class="wrapper primary medium"
                type="button"
              >
                Confirm
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;

exports[`<ChangePlanModal /> should not render the modal 1`] = `
<body>
  <div />
</body>
`;

exports[`<ChangePlanModal /> should render 1`] = `
<body
  class="modal-open"
>
  <div />
  <div
    style="position: relative; z-index: 1050; display: block;"
    tabindex="-1"
  >
    <div
      class=""
    >
      <div
        class="modal fade"
        role="dialog"
        style="display: block;"
        tabindex="-1"
      >
        <div
          class="modal-dialog modal modal-dialog-centered"
          role="document"
        >
          <div
            class="modal-content"
          >
            <div
              class="modal-header"
            >
              <h5
                class="modal-title"
              >
                Title of modal
              </h5>
              <button
                aria-label="Close"
                class="close"
                type="button"
              >
                <span
                  aria-hidden="true"
                >
                  ×
                </span>
              </button>
            </div>
            <div
              class="p-0 modal-body"
            >
              <div
                class="m-3"
              >
                description of the plan change
              </div>
              <div
                class="m-3 flex justify-content-between"
              >
                <div>
                  BillingPlanCard mock,
                  <div>
                    theme: 
                    Grey
                  </div>
                  <div>
                    renderBody: 
                    <div>
                      SynchronizedScrollTopContainer mock,
                      <div>
                        height: 
                        280
                      </div>
                    </div>
                  </div>
                  <div>
                    className: 
                    plan
                  </div>
                </div>
                <img
                  alt="arrow-icon"
                  src="test-file-stub"
                />
                <div>
                  renderComparedPlan
                </div>
              </div>
            </div>
            <div
              class="footer modal-footer"
            >
              <button
                class="wrapper secondary medium"
                type="button"
              >
                Cancel
              </button>
              <button
                class="wrapper primary medium"
                type="button"
              >
                Confirm
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="modal-backdrop fade"
      />
    </div>
  </div>
</body>
`;
